--- a/Dao_Dapp/package.json
+++ b/Dao_Dapp/package.json
@@ -10,6 +10,19 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
-    "hardhat": "^2.19.2"
+    "@nomiclabs/hardhat-etherscan": "^3.1.8",
+    "@truffle/hdwallet-provider": "^2.1.15",
+    "chai": "^4.3.10",
+    "chai-as-promised": "^7.1.1",
+    "ethereum-waffle": "^4.0.10",
+    "hardhat": "^2.19.2",
+    "hardhat-console": "^1.0.0",
+    "hardhat-etherscan": "^1.0.1",
+    "hardhat-network": "^0.0.1",
+    "solhint": "^4.0.0"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.0.1",
+    "ethers": "^6.9.0"
   }
 }
