--- a/new_frontend/package.json
+++ b/new_frontend/package.json
@@ -11,6 +11,8 @@
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.2.5",
+    "vuejs-paginate": "^2.1.0",
+    "vuejs-paginate-next": "^1.0.2",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
