--- a/new_frontend/package.json
+++ b/new_frontend/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "axios": "^1.6.3",
     "core-js": "^3.8.3",
+    "socket.io-client": "^4.7.2",
     "vue": "^3.2.13",
     "vue-advanced-chat": "^2.0.10",
+    "vue-native-websocket": "^2.0.15",
     "vue-router": "^4.2.5",
     "vuejs-paginate": "^2.1.0",
     "vuejs-paginate-next": "^1.0.2",
