--- a/new_frontend/package.json
+++ b/new_frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.6.3",
     "core-js": "^3.8.3",
+    "ethers": "^6.9.2",
     "vue": "^3.3.13",
     "vue-advanced-chat": "^2.0.10",
     "vue-native-websocket": "^2.0.15",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@babel/plugin-transform-private-methods": "^7.23.3",
     "@types/bonjour": "^3.5.13",
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-plugin-eslint": "~5.0.0",
