--- a/new_frontend/package.json
+++ b/new_frontend/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "axios": "^1.6.3",
     "core-js": "^3.8.3",
-    "ethers": "^6.9.2",
+    "ethers": "^6.4.0",
+    "json-bigint": "^1.0.0",
     "vue": "^3.3.13",
     "vue-advanced-chat": "^2.0.10",
     "vue-native-websocket": "^2.0.15",
