--- a/new_frontend/package.json
+++ b/new_frontend/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^1.6.3",
     "core-js": "^3.8.3",
+    "html2pdf.js": "^0.9.3",
+    "jspdf": "^2.5.1",
     "vue": "^3.3.13",
     "vue-advanced-chat": "^2.0.10",
     "vue-native-websocket": "^2.0.15",
