--- a/new_frontend/package.json
+++ b/new_frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.6.3",
+    "big-integer": "^1.6.52",
     "core-js": "^3.8.3",
     "ethers": "^6.4.0",
     "json-bigint": "^1.0.0",
